enables view transitions, fixes header-spacing

--- a/website/_source/css/_site-header.css
+++ b/website/_source/css/_site-header.css
@@ -13,6 +13,7 @@
     align-items: center;
     padding-block: var(--space-s);
     flex-wrap: wrap;
+    gap: var(--space-m);
 }
 
 main > *:first-child {
